syntax = "proto3";
package clusterpb;
option go_package = "/clusterpb";

import "cluster_base.proto";

message NewMemberRequest {
  MemberInfo memberInfo = 1;
}

message NewMemberResponse {}

message DelMemberRequest {
  string serviceAddr = 1;
}

message DelMemberResponse {}

service Member{
  rpc NewMember (NewMemberRequest) returns (NewMemberResponse) {}
  rpc DelMember (DelMemberRequest) returns (DelMemberResponse) {}
}
